@@ -10,8 +10,8 @@
 #define DEPTH_CHARGE_SINK_SPEED 4	// m/sec
 #define DEADLY_DC_RADIUS_SURFACE 120	// meters
 #define DEADLY_DC_RADIUS_200M 80
-#define DAMAGE_DC_RADIUS_SURFACE 240	// meters
-#define DAMAGE_DC_RADIUS_200M 200
+#define DAMAGE_DC_RADIUS_SURFACE 480	// meters, fixme realistic values?
+#define DAMAGE_DC_RADIUS_200M 320
 
 class depth_charge : public sea_object
 {
